enhance performance to v0.2
enhance performance to v0.2